rename src package to lib to be inline with other plugin structures. udpate grunt tasks

--- a/example.html
+++ b/example.html
@@ -5,13 +5,13 @@
   <title>Video.js Errors</title>
 
   <link href="node_modules/video.js/dist/video-js/video-js.css" rel="stylesheet">
-	<link href="src/videojs.errors.css" rel="stylesheet">
+	<link href="lib/videojs.errors.css" rel="stylesheet">
 
 	<!-- Video.JS -->
 	<script src="node_modules/video.js/dist/video-js/video.js"></script>
 
   <!-- Errors Plugin -->
-	<script src="src/videojs.errors.js"></script>
+	<script src="lib/videojs.errors.js"></script>
   <!-- Spanish Language Support -->
   <script src="lang/es.js"></script>
 
