--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,7 @@
     });
   </script>
   <script src="../node_modules/video.js/dist/video-js/video.js"></script>
-  <script src="../src/videojs.errors.js"></script>
+  <script src="../lib/videojs.errors.js"></script>
   <script src="videojs-errors.test.js"></script>
 </body>
 </html>
